Add typed holes support in Template Haskell.
Fixes #10267. Typed holes in typed Template Haskell currently don't work.
See #10945 and #10946.

--- a/docs/users_guide/7.12.1-notes.rst
+++ b/docs/users_guide/7.12.1-notes.rst
@@ -128,6 +128,10 @@ Template Haskell
 -  Partial type signatures can now be used in splices, see
    :ref:`pts-where`.
 
+-  ``Template Haskell`` now fully supports typed holes and quoting unbound
+   variables.  This means it is now possible to use pattern splices nested
+   inside quotation brackets.
+
 -  ``Template Haskell`` now supports the use of ``UInfixT`` in types to
    resolve infix operator fixities, in the same vein as ``UInfixP`` and
    ``UInfixE`` in patterns and expressions. ``ParensT`` and ``InfixT``
