Fill in associated type defaults with DeriveAnyClass
Summary:
Unlike `-XDefaultSignatures`, `-XDeriveAnyClass` would not fill in
associated type family defaults when deriving a class which contained
them.

In order to fix this properly, `tcATDefault` needed to be used from
`TcGenDeriv`. To avoid a module import cycle, `tcATDefault` was moved
from `TcInstDcls` to `TcClsDcl`.

Fixes #10361.

Test Plan: ./validate

Reviewers: kosmikus, dreixel, bgamari, austin, simonpj

Subscribers: thomie

Differential Revision: https://phabricator.haskell.org/D1283

GHC Trac Issues: #10361

--- a/docs/users_guide/7.12.1-notes.rst
+++ b/docs/users_guide/7.12.1-notes.rst
@@ -78,6 +78,9 @@ Language
    arguments with certain unlifted types. See :ref:`generic-programming` for
    more details.
 
+-  The ``-XDeriveAnyClass`` extension now fills in associated type family
+   default instances when deriving a class that contains them.
+
 Compiler
 ~~~~~~~~
 
