Make dataToQa aware of Data instances which use functions to implement toConstr
Trac #10796 exposes a way to make `template-haskell`'s `dataToQa` function
freak out if using a `Data` instance that produces a `Constr` (by means of
`toConstr`) using a function name instead of a data constructor name. While
such `Data` instances are somewhat questionable, they are nevertheless present
in popular libraries (e.g., `containers`), so we can at least make `dataToQa`
aware of their existence.

In order to properly distinguish strings which represent variables (as opposed
to data constructors), it was necessary to move functionality from `Lexeme` (in
`ghc`) to `GHC.Lexeme` in a new `ghc-boot` library (which was previously named
`bin-package-db`).

Reviewed By: goldfire, thomie

Differential Revision: https://phabricator.haskell.org/D1313

GHC Trac Issues: #10796

--- a/docs/users_guide/7.12.1-notes.rst
+++ b/docs/users_guide/7.12.1-notes.rst
@@ -204,11 +204,6 @@ base
    this functionality was only available from ``GHC.Conc``.
 
 
-bin-package-db
-~~~~~~~~~~~~~~
-
--  This is an internal package, and should not be used.
-
 binary
 ~~~~~~
 
@@ -253,6 +248,24 @@ ghc
    ``HsImplBang``. Data constructors now always carry around their
    strictness annotations as the user wrote them, whether from an
    imported module or not.
+
+-  Moved `startsVarSym`, `startsVarId`, `startsConSym`, `startsConId`,
+   `startsVarSymASCII`, and `isVarSymChar` from `Lexeme` to the `GHC.Lemexe`
+   module of the `ghc-boot` library.
+
+ghc-boot
+~~~~~~~~
+
+-  This is an internal package. Use with caution.
+
+-  This package was renamed from `bin-package-db` to reflect its new purpose
+   of containing intra-GHC functionality that needs to be shared across
+   multiple GHC boot libraries.
+
+-  Added `GHC.Lexeme`, which contains functions for determining if a
+   character can be the first letter of a variable or data constructor in
+   Haskell, as defined by GHC. (These functions were moved from `Lexeme`
+   in `ghc`.)
 
 ghc-prim
 ~~~~~~~~
