Make worker-wrapper optional
Add -fworker-wrapper flag which enables the worker-wrapper transformation. It
is implied by -O.

The expected users of this flag, which includes myself, are GHC API users.  In
my Haskell-to-Hardware compiler, which uses the GHC API, I have seen no
benifits of the worker-wrapper transformation. It does however induce longer
compilation times.

Further discussion can be seen here:
https://mail.haskell.org/pipermail/ghc-devs/2015-October/010096.html

Reviewed By: austin

Differential Revision: https://phabricator.haskell.org/D1372

GHC Trac Issues: #11020

--- a/docs/users_guide/7.12.1-notes.rst
+++ b/docs/users_guide/7.12.1-notes.rst
@@ -102,6 +102,12 @@ Compiler
    ``-fcpr-off`` is now removed, run with ``-fno-cpr-anal`` to get the
    old ``-fcpr-off`` behaviour.
 
+-  Added the option ``-fworker-wrapper``. When enabled, the worker-wrapper
+   transformation is performed after a strictness analysis pass. It is implied
+   by ``-O`` and by ``-fstrictness``. It is disabled by ``-fno-strictness``.
+   Enabling ``-fworker-wrapper`` while strictness analysis is disabled (by
+   ``-fno-strictness``) has no effect.
+
 GHCi
 ~~~~
 
